--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "axios": "^1.3.4",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-moment": "^1.1.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
