--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "emoji-picker-react": "^4.4.9",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-calendar": "^4.2.1",
